P2/config/k8s-config/app1-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: app1
          image: paulbouwer/hello-kubernetes:1.10
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
